# alethe-agents

./: package-lock.json  package.json
.github/workflows/: ci.yml  discord-notify.yml
docs/: TESTING-ghostty.md
scripts/: install.sh
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ghostty_bridge.rs  lib.rs  opencode_sessions.rs  pty.rs
src/components/GhosttySurface/: index.tsx
src/components/ProjectSidebar/: ProjectSidebar.module.css  index.tsx
src/components/TerminalPane/: index.tsx
src/components/TitleBar/: TitleBar.module.css  index.tsx
src/components/XTermView/: XTermView.module.css  index.tsx  terminalLinks.test.ts  terminalLinks.ts
src/components/modals/: OnboardingModal.tsx  PreferencesModal.tsx
src/lib/: limitResetWatch.ts  notifications.ts  resetLastSession.ts  sessionLaunch.ts  sessionResume.ts  sessionWatch.ts  tauri.ts  types.ts
src/lib/i18n/messages/: en.ts  pt-BR.ts
src/stores/: projectsStore.ts
tests/: workspaceNavigation.test.ts
