[package]
name = "alethe"
version = "1.2.2"
description = "Alethe — terminal multiplexer GUI"
authors = ["Kauã Miguel"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "alethe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nanoid = "0.4"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
which = "6"
zip = "0.6"
sysinfo = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tiny_http = "0.12"
keyring = "3"
dirs-next = "2"
base64 = "0.22"
urlencoding = "2"
dotenvy = "0.15"
discord-rich-presence = "1.1.0"
notify = "6"

# Dependências só-Windows (registro + Win32). Em Linux/macOS o `winreg` nem
# compila, então ficam atrás de `cfg(windows)`; o código que as usa já é gated.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
] }

# Em dev, unwind permite que um panic de comando vire Err em vez de derrubar o
# app inteiro durante uma sessão de HMR. Release segue abort (binário menor).
[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = "s"
strip = true
